--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Buscaminas/Buscaminas/nbproject/private/
 /Buscaminas/Buscaminas/build/
+/TPA_Cliente/nbproject/private/
+/TPA_Servidor/nbproject/private/
