* Base de Datos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /TPA_Cliente/nbproject/private/
 /TPA_Servidor/nbproject/private/
 /TPA_Servidor/build/
+/TPA_Juego/nbproject/private/
+/TPA_Juego/build/
+/TPA_Cliente/build/
+/BaseDatos/nbproject/private/
+/BaseDatos/build/
+/Tablas/nbproject/private/
+/Tablas/build/
